# polymarket-lmsr-bot

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.toml.example  deny.toml
.github/workflows/: ci-cd.yml
benches/: lmsr_bench.rs
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/api/: auth.rs  client.rs  mod.rs  orderbook.rs  orders.rs  types.rs
src/adapters/chain/: approvals.rs  contracts.rs  gas.rs  mod.rs  provider.rs  validator.rs
src/adapters/feeds/: binance.rs  bridge.rs  coinbase.rs  mod.rs  polymarket_ws.rs  task_supervisor.rs
src/adapters/metrics/: health.rs  mod.rs  prometheus.rs
src/adapters/persistence/: mod.rs  repository_impl.rs  state.rs  trades.rs
src/config/: hot_reload.rs  loader.rs  mod.rs
src/domain/: bayesian.rs  fees.rs  kelly.rs  lmsr.rs  mod.rs  trade.rs
src/ports/: chain_client.rs  execution.rs  market_feed.rs  mod.rs  order_executor.rs  repository.rs
src/usecases/: arbitrage_engine.rs  mod.rs  order_manager.rs  risk_manager.rs  settlement.rs  wallet_manager.rs
tests/: backtest.rs  integration_test.rs  proptest_domain.rs
