[package]
name = "polymarket-lmsr-bot"
version = "0.1.0"
edition = "2024"  # ✅ CORREGIDO - Última edition estable
rust-version = "1.93.1"
authors = ["Your Name <your.email@example.com>"]
description = "High-frequency arbitrage bot for Polymarket prediction markets"
license = "MIT"
repository = "https://github.com/yourusername/polymarket-lmsr-bot"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures = "0.3"

# Blockchain (Polygon via alloy-rs)
alloy = { version = "0.9", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
governor = "0.6"  # Rate limiting

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.13"
axum = "0.7"  # For health endpoints

# Cryptography
ethers-signers = "2.0"  # For EIP-712 signatures (transitioning to alloy)

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time & Math
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.36"

# Configuration
config = "0.14"
dotenv = "0.15"

# Task supervision
task-supervisor = "0.3"

# Allocator (Linux only, Windows uses default)
[target.'cfg(all(not(target_env = "msvc"), target_os = "linux"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
# Testing
proptest = "1.5"
mockall = "0.13"
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.test]
opt-level = 1

[[bin]]
name = "polymarket-bot"
path = "src/main.rs"
