[package]
name = "polymarket-lmsr-bot"
version = "0.5.0"
edition = "2024"
rust-version = "1.82"
description = "LMSR-based market making bot for Polymarket prediction markets"
license = "MIT"
repository = "https://github.com/juankaspain/polymarket-lmsr-bot"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Blockchain (alloy-rs 0.9 — NEVER ethers-rs)
alloy = { version = "0.9", features = ["full"] }

# HTTP client (rustls only — no native-tls anywhere)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket (rustls to match reqwest — NEVER native-tls)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Async stream combinators (SinkExt, StreamExt for WebSocket feeds)
futures-util = "0.3"

# Serialization — pinned =1.0.219 (last version before serde_core split that breaks alloy 0.9)
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
toml = "0.8"

# Async traits (needed until Rust stabilizes async fn in traits for dyn dispatch)
async-trait = "0.1"

# CLOB auth: HMAC-SHA256 signing + base64 encoding
hmac-sha256 = "1.1"
base64 = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics (Prometheus — checklist pinned 0.13)
prometheus = "0.13"

# HTTP server for health/metrics endpoints
axum = "0.7"

# Rate limiting (checklist pinned 0.6)
governor = "0.6"

# Precise decimal arithmetic for financial calculations
rust_decimal = "1.36"
rust_decimal_macros = "1.36"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation for order/trade IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Memory allocator — jemalloc on Linux prod only (NEVER on Windows/MSVC dev)
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
# Testing
mockall = "0.13"
proptest = "1.5"
tokio-test = "0.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "lmsr_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[lints.clippy]
pedantic = "warn"
nursery = "warn"
